[package]
name = "bolt"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
authors = ["Ivan Ukhov <ivan.ukhov@gmail.com>"]
description = "The package provides a hierarchical read-write lock."
documentation = "https://docs.rs/bolt"
homepage = "https://github.com/stainless-steel/bolt"
repository = "https://github.com/stainless-steel/bolt"
categories = ["asynchronous", "concurrency"]
keywords = []

[dependencies]
papaya = "0.2"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
